@@ -7,7 +7,7 @@
 use 5.010;
 use strict;
 use warnings;
-use Test::More tests => 3;
+use Test::More tests => 4;
 
 use Win32::Mechanize::NotepadPlusPlus::Notepad ':vars';
 
@@ -18,6 +18,9 @@ ok defined($count), '%nppm'; note sprintf 'keys %%nppm => %s', defined($count) ?
 
 eval '$count = scalar keys %nppidm; 1' or do { $count = undef; };
 ok defined($count), '%nppidm'; note sprintf 'keys %%nppidm => %s', defined($count) ? $count : '<undef>';
+
+eval '$count = scalar keys %nppencoding; 1' or do { $count = undef; };
+ok defined($count), '%nppencoding'; note sprintf 'keys %%nppencoding => %s', defined($count) ? $count : '<undef>';
 
 eval '$count = scalar keys %scimsg; 1' or do { $count = undef; };
 ok !defined($count), '%scimsg undefined'; note sprintf 'keys %%scimsg => %s', defined($count) ? $count : '<undef>';
