@@ -25,9 +25,9 @@ use Win32::Mechanize::NotepadPlusPlus qw/:main :vars/;
     # need the current language type and language description to be able to revert the section
     my $langType = notepad()->getLangType();    # get language-type index for the current buffer
     ok defined($langType), 'getLangType(): retval'; note sprintf qq(\t=> "%s"\n), $langType // '<undef>';
-    my $langDesc = notepad()->getLanguageDesc($langType); # not yet implemented
+    my $langDesc = notepad()->getLanguageDesc($langType);
     ok $langDesc, 'getLanguageDesc()'; note sprintf qq(\t=> "%s"\n), $langDesc;
-    my $langName = notepad()->getLanguageName($langType); # not yet implemented
+    my $langName = notepad()->getLanguageName($langType);
     ok $langName, 'getLanguageName()'; note sprintf qq(\t=> "%s"\n), $langName;
 
     $ret = notepad()->setStatusBar( 'STATUSBAR_DOC_TYPE', $langDesc );
