@@ -4,6 +4,7 @@ v0.001003 In Progress
     - editor->getLine() on an empty line will now correctly return an empty string, not "\0" (fixed #14)
     - make the editor->hwnd() a public method (instead of using editor()->{_hwnd})
     - make the notepad->hwnd() a public method (instead of using notepad()->{_hwnd})
+    - improve test coverage: add encoding names and getLanguageName coverage to npp-buffer.t
     - examples/ folder: adding more example usages
     - improve Editor documentation on ->findText and some other methods
     - improve Notepad documentation, especially fixing the link for menuCmdID source file;
